--- a/index.html
+++ b/index.html
@@ -301,17 +301,14 @@
 @media screen and (min-width: 480px) {
   /* line 1188, //www.jotform.com/themes/css/style.less */
   .supernova {
-    background-image: url("//static-interlogyllc.netdna-ssl.com/themes/img/blank.gif");
   }
 }
 /* line 1195, //www.jotform.com/themes/css/style.less */
-#stage {
-  background-image: url("//static-interlogyllc.netdna-ssl.com/themes/img/blank.gif");
+#stage 
 }
 /* | */
 /* line 1209, //www.jotform.com/themes/css/style.less */
 .form-all {
-  background-image: url("//static-interlogyllc.netdna-ssl.com/themes/img/blank.gif");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center top;
@@ -352,22 +349,6 @@
   font-size: 14px;
   font-weight: normal;
 }
-/*
-	TODO: Significant improvement possibility:
-
-	following import statement is not required in design mode,
-	but it should be inside the exported css of current design, in the form itself
-	when it is shown to people. Being of this here, causing re-drawn problems.
-	we should find a way to only include this in css send while saving current design
-
-	see prepareModel4Save for implementation for @buttonFontType
-*/
-/*
-& when ( @buttonFontType = google ) {
-	@import (css) "@{buttonFontLink}";
-}
-*/
-/* line 1687, //www.jotform.com/themes/css/style.less */
 h2.form-header {
   line-height: 1.618em;
   font-size: 1.714em;
@@ -383,7 +364,6 @@ h2 ~ .form-subHeader {
 }
 /* line 1719, //www.jotform.com/themes/css/style.less */
 .form-header-group {
-  background-image: url("//static-interlogyllc.netdna-ssl.com/themes/img/blank.gif");
 }
 /*.form-dropdown,
 .form-radio-item,
@@ -685,14 +665,14 @@ li[data-type="control_image"] img {
     margin-top: auto;
     margin-top: initial;
   }
-  
+
   /*PREFERENCES STYLE*//*__INSPECT_SEPERATOR__*/
     /* Injected CSS Code */
 </style>
 </head>
 <body>
 <script type="text/javascript" src="js/calculadora.js"></script>
-<form class="jotform-form" action="#" method="post" name="form_90946003184657" id="90946003184657" accept-charset="utf-8">
+<form class="jotform-form" action="#" onsubmit="return false" method="post" name="form_90946003184657" id="90946003184657" accept-charset="utf-8">
   <input type="hidden" name="formID" value="90946003184657" />
   <div class="form-all">
     <ul class="form-section page-section" role="main">
@@ -715,25 +695,25 @@ li[data-type="control_image"] img {
             <span class="form-radio-item" style="clear:left">
               <span class="dragger-item">
               </span>
-              <input type="radio" class="form-radio" id="input_5_0" checked name="q5_tipoDe" value="Cálculo de tempo" data-calcvalue="1" />
+              <input type="radio" class="form-radio" id="input_5_0" checked name="q5_tipoDe" value="Cálculo de tempo" data-calcvalue="1" onchange="setFormRequiredInputs()"/>
               <label id="label_input_5_0" for="input_5_0"> Cálculo de tempo </label>
             </span>
             <span class="form-radio-item" style="clear:left">
               <span class="dragger-item">
               </span>
-              <input type="radio" class="form-radio" id="input_5_1" name="q5_tipoDe" value="Cálculo valor uniforme" data-calcvalue="2" />
+              <input type="radio" class="form-radio" id="input_5_1" name="q5_tipoDe" value="Cálculo valor uniforme" data-calcvalue="2" onchange="setFormRequiredInputs()"/>
               <label id="label_input_5_1" for="input_5_1"> Cálculo de valor uniforme </label>
             </span>
             <span class="form-radio-item" style="clear:left">
               <span class="dragger-item">
               </span>
-              <input type="radio" class="form-radio" id="input_5_2" name="q5_tipoDe" value="Cálculo de valor presente" data-calcvalue="3" />
+              <input type="radio" class="form-radio" id="input_5_2" name="q5_tipoDe" value="Cálculo de valor presente" data-calcvalue="3" onchange="setFormRequiredInputs()"/>
               <label id="label_input_5_2" for="input_5_2"> Cálculo de valor presente </label>
             </span>
             <span class="form-radio-item" style="clear:left">
               <span class="dragger-item">
               </span>
-              <input type="radio" class="form-radio" id="input_5_3" name="q5_tipoDe" value="Cálculo de valor futuro" data-calcvalue="4" />
+              <input type="radio" class="form-radio" id="input_5_3" name="q5_tipoDe" value="Cálculo de valor futuro" data-calcvalue="4" onchange="setFormRequiredInputs()"/>
               <label id="label_input_5_3" for="input_5_3"> Cálculo de valor futuro</label>
             </span>
           </div>
@@ -742,31 +722,31 @@ li[data-type="control_image"] img {
       <li class="form-line" data-type="control_number" id="id_3">
         <label class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> Número de períodos:</label>
         <div id="cid_3" class="form-input-wide">
-          <input type="number" id="input_3" name="q3_numeroDe3" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-numbermin="0" data-numbermax="1000000000" data-component="number" />
+          <input type="number" step="any" id="input_3" name="q3_numeroDe3" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-numbermin="0" data-numbermax="1000000000" data-component="number" oninvalid="this.setCustomValidity('Preencha este campo')" oninput="setCustomValidity('')"/>
         </div>
       </li>
       <li class="form-line" data-type="control_number" id="id_4">
         <label class="form-label form-label-top form-label-auto" id="label_4" for="input_4"> Taxa de juros periódica (%):</label>
         <div id="cid_4" class="form-input-wide">
-          <input type="number" id="input_4" name="q4_taxaDe" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-numbermin="0" data-numbermax="1000000000" data-component="number" />
+          <input type="number" step="any" id="input_4" name="q4_taxaDe" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-numbermin="0" data-numbermax="1000000000" data-component="number" oninvalid="this.setCustomValidity('Preencha este campo')" oninput="setCustomValidity('')" required/>
         </div>
       </li>
       <li class="form-line" data-type="control_number" id="id_6">
         <label class="form-label form-label-top form-label-auto" id="label_6" for="input_6"> Valor presente (R$):</label>
         <div id="cid_6" class="form-input-wide">
-          <input type="number" id="input_6" name="q6_valorDa" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-component="number" />
+          <input type="number" step="any" id="input_6" name="q6_valorDa" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-component="number" oninvalid="this.setCustomValidity('Preencha este campo')" oninput="setCustomValidity('')" required/>
         </div>
       </li>
       <li class="form-line" data-type="control_number" id="id_7">
         <label class="form-label form-label-top form-label-auto" id="label_7" for="input_7"> Valor futuro (R$):</label>
         <div id="cid_7" class="form-input-wide">
-          <input type="number" id="input_7" name="q7_valorFinanciado" data-type="input-number" class=" form-number-input form-textbox" style="width:200px" size="5" value="" placeholder="ex: 23" data-component="number" />
+          <input type="number" step="any" id="input_7" name="q7_valorFinanciado" data-type="input-number" class=" form-number-input form-textbox form-highlight" style="width:200px" size="5" value="" placeholder="ex: 23" data-component="number" oninvalid="this.setCustomValidity('Preencha este campo')" oninput="setCustomValidity('')" required/>
         </div>
       </li>
       <li class="form-line" data-type="control_button" id="id_8">
         <div id="cid_8" class="form-input-wide">
           <div style="text-align:center" class="form-buttons-wrapper">
-            <button id="input_8" type="button" onclick="calcular()" class="form-submit-button" data-component="button">
+            <button id="input_8" type="submit" class="form-submit-button" onclick="calcular()" data-component="button">
               Calcular
             </button>
           </div>
