Adicionado o calculo da taxa

--- a/index.html
+++ b/index.html
@@ -716,6 +716,12 @@ li[data-type="control_image"] img {
               <input type="radio" class="form-radio" id="input_5_3" name="q5_tipoDe" value="Cálculo de valor futuro" data-calcvalue="4" onchange="setFormRequiredInputs()"/>
               <label id="label_input_5_3" for="input_5_3"> Cálculo de valor futuro</label>
             </span>
+            <span class="form-radio-item" style="clear:left">
+              <span class="dragger-item">
+              </span>
+              <input type="radio" class="form-radio" id="input_5_4" name="q5_tipoDe" value="Cálculo de taxa" data-calcvalue="5" onchange="setFormRequiredInputs()"/>
+              <label id="label_input_5_4" for="input_5_4"> Cálculo de taxa</label>
+            </span>
           </div>
         </div>
       </li>
